--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
 
       # run tests!
       - run: yarn ng build --prod
-      - run: yarn ng test --single-run
+      - run: yarn ng test --sr
 
 
 
